<!--
 CineLog Copyright 2018 Pierre Rognon
 kinolog Copyright (C) 2017  ryan rigby

 This file is part of CineLog.
 CineLog is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 CineLog is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with CineLog. If not, see <https://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".android.activities.MainActivity">
    <item
        android:id="@+id/action_sort"
        android:title="@string/order"
        app:showAsAction="never"
        android:visible="true">
        <menu>
            <item android:id="@+id/order_by_title"
                android:title="@string/order_by_title" >
                <menu>
                    <item android:id="@+id/order_by_title_asc"
                        android:title="@string/order_by_title_asc" />

                    <item android:id="@+id/order_by_title_desc"
                        android:title="@string/order_by_title_desc" />
                </menu>
            </item>
            <item android:id="@+id/order_by_rating"
                android:title="@string/rating" >
                <menu>
                    <item android:id="@+id/order_by_rating_highest_first"
                        android:title="@string/highest_first" />

                    <item android:id="@+id/order_by_rating_lowest_first"
                        android:title="@string/lowest_first" />
                </menu>
            </item>
            <item android:id="@+id/order_by_year"
                android:title="@string/year" >
                <menu>
                    <item android:id="@+id/order_by_year_newest_first"
                        android:title="@string/newest_first" />

                    <item android:id="@+id/order_by_year_oldest_first"
                        android:title="@string/oldest_first" />
                </menu>
            </item>
            <item android:id="@+id/order_by_date"
                android:title="@string/date_added" >
                <menu>
                    <item android:id="@+id/order_by_date_added_newest_first"
                        android:title="@string/newest_first" />

                    <item android:id="@+id/order_by_date_added_oldest_first"
                        android:title="@string/oldest_first" />
                </menu>
            </item>

        </menu>

    </item>
    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:title="@string/action_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import"
        android:orderInCategory="100"
        android:title="@string/action_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
