<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/general_preferences">

        <EditTextPreference
            android:key="default_max_rate_value"
            android:title="@string/default_maximum_rating"
            android:summary="@string/default_maximum_rating_summary"
            android:dialogTitle="@string/default_maximum_rating_dialog"
            android:inputType="number" />

        <ListPreference
            android:key="default_tmdb_language"
            android:title="@string/default_tmdb_language_title"
            android:defaultValue="5"
            android:entries="@array/available_tmdb_languages_keys"
            android:entryValues="@array/available_tmdb_languages_values"/>
    </PreferenceCategory>

</PreferenceScreen>