<?xml version="1.0" encoding="utf-8"?>
<!--
 CineLog Copyright 2024 Pierre Rognon

 This file is part of CineLog.
 CineLog is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 CineLog is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with CineLog. If not, see <https://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reviews"
            android:title="@string/nav_reviews_space">
            <menu>
                <item
                    android:id="@+id/nav_reviews_movie"
                    android:title="@string/title_fragment_movie" />
                <item
                    android:id="@+id/nav_reviews_serie"
                    android:title="@string/title_fragment_serie" />
            </menu>
        </item>
        <item
            android:id="@+id/nav_room_reviews"
            android:title="@string/nav_reviews_room_space">
            <menu>
                <item
                    android:id="@+id/nav_reviews_room_movie"
                    android:title="@string/title_fragment_movie" />
                <item
                    android:id="@+id/nav_reviews_room_serie"
                    android:title="@string/title_fragment_serie" />
            </menu>
        </item>
        <item
            android:id="@+id/nav_wishlist"
            android:title="@string/nav_wishlist_space">
            <menu>
                <item
                    android:id="@+id/nav_wishlist_movie"
                    android:title="@string/title_fragment_movie" />
                <item
                    android:id="@+id/nav_wishlist_serie"
                    android:title="@string/title_fragment_serie" />
            </menu>
        </item>
        <item
            android:id="@+id/nav_room_wishlist"
            android:title="@string/nav_wishlist_room_space">
            <menu>
                <item
                    android:id="@+id/nav_wishlist_room_movie"
                    android:title="@string/title_fragment_movie" />
                <item
                    android:id="@+id/nav_wishlist_room_serie"
                    android:title="@string/title_fragment_serie" />
            </menu>
        </item>
        <item
            android:id="@+id/nav_tags"
            android:title="@string/nav_tags_space" />
    </group>
</menu>