<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    app:startDestination="@id/nav_reviews_movie">
    <fragment
        android:id="@+id/nav_reviews_movie"
        android:name="com.ulicae.cinelog.android.v2.fragments.MovieFragment"
        android:label="@string/title_fragment_movie" >
        <action
            android:id="@+id/action_nav_reviews_movie_to_addKinoFragment"
            app:destination="@id/searchTmdbMovieFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_reviews_serie"
        android:name="com.ulicae.cinelog.android.activities.fragments.reviews.SerieFragment"
        android:label="@string/title_fragment_serie" >
        <action
            android:id="@+id/action_nav_reviews_serie_to_addSerieFragment"
            app:destination="@id/searchTmbdSerieFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_wishlist_movie"
        android:name="com.ulicae.cinelog.android.activities.fragments.wishlist.MovieWishlistFragment"
        android:label="@string/title_fragment_wishlist_movie" />
    <fragment
        android:id="@+id/nav_wishlist_serie"
        android:name="com.ulicae.cinelog.android.activities.fragments.wishlist.SerieWishlistFragment"
        android:label="@string/title_fragment_wishlist_serie" />
    <fragment
        android:id="@+id/nav_tags"
        android:name="com.ulicae.cinelog.android.activities.fragments.wishlist.SerieWishlistFragment"
        android:label="@string/tags_title" />
    <fragment
        android:id="@+id/searchTmdbMovieFragment"
        android:name="com.ulicae.cinelog.android.v2.fragments.SearchTmdbMovieFragment"
        android:label="SearchTmdbMovieFragment" />
    <fragment
        android:id="@+id/searchTmbdSerieFragment"
        android:name="com.ulicae.cinelog.android.v2.fragments.SearchTmbdSerieFragment"
        android:label="SearchTmbdSerieFragment" />

</navigation>