<?xml version="1.0" encoding="utf-8"?><!--
 CineLog Copyright 2018 Pierre Rognon
 kinolog Copyright (C) 2017  ryan rigby

 This file is part of CineLog.
 CineLog is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 CineLog is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with CineLog. If not, see <https://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_import_db"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".android.activities.add.AddKino"
    tools:showIn="@layout/activity_import_db">

    <TextView
        android:id="@+id/import_db_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_db_label" />

    <Button
        android:id="@+id/import_db_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/import_db_label"
        android:text="@string/import_db" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/import_db_button"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <LinearLayout
                android:id="@+id/import_tags_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_tags_status"
                    android:textColor="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/import_tags_status_waiting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_status_waiting" />
                <TextView
                    android:id="@+id/import_tags_error_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/import_movies_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_movies_status"
                    android:textColor="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/import_movies_status_waiting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_status_waiting" />
                <TextView
                    android:id="@+id/import_movies_error_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/import_series_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_series_status"
                    android:textColor="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/import_series_status_waiting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_status_waiting" />
                <TextView
                    android:id="@+id/import_series_error_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/import_wishlist_series_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_wishlist_series_status"
                    android:textColor="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/import_wishlist_series_status_waiting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_status_waiting" />
                <TextView
                    android:id="@+id/import_wishlist_series_error_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/import_wishlist_movies_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_wishlist_movies_status"
                    android:textColor="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/import_wishlist_movies_status_waiting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_status_waiting" />
                <TextView
                    android:id="@+id/import_wishlist_movies_error_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
