<?xml version="1.0" encoding="utf-8"?><!--
 CineLog Copyright 2018 Pierre Rognon
 kinolog Copyright (C) 2017  ryan rigby

 This file is part of CineLog.
 CineLog is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 CineLog is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with CineLog. If not, see <https://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/view_kino_review_content_title_layout"
        style="?android:attr/listSeparatorTextViewStyle"
        android:text="@string/view_poster_review_layout_title" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/view_kino_review_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".60"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="7dp">

            <TextView
                android:id="@+id/view_kino_review_rating_as_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="?attr/colorPrimary"
                tools:ignore="RtlSymmetry" />

            <RatingBar
                android:id="@+id/view_kino_review_rating"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_kino_review_review_date_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".40"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/view_kino_review_review_date_label"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_kino_review_review_date_label_value"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_kino_review_review_date"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_kino_review_review_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="7dp">

        <TextView
            android:id="@+id/view_kino_review_review_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_kino_review_review_label_value"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_kino_review_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Banane" />
    </LinearLayout>

    <TextView
        android:id="@+id/view_kino_review_tags_label"
        style="?android:attr/listSeparatorTextViewStyle"
        android:text="@string/view_kino_review_tags_label_value" />

    <LinearLayout
        android:id="@+id/view_kino_review_tags_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:padding="7dp" />

</LinearLayout>